--- a/app/design/frontend/default/homezone/layout/newsletter.xml
+++ b/app/design/frontend/default/homezone/layout/newsletter.xml
@@ -35,8 +35,8 @@ Default layout, loads most of the pages
     <default>
 
         <!-- Mage_Newsletter -->
-        <reference name="left">
-            <block type="newsletter/subscribe" name="left.newsletter" template="newsletter/subscribe.phtml"/>
+        <reference name="footer">
+            <block type="newsletter/subscribe" name="footer.newsletter" template="newsletter/subscribe.phtml"/>
         </reference>
 
     </default>
