--- a/app/design/frontend/default/homezone/template/catalog/product/new2.phtml
+++ b/app/design/frontend/default/homezone/template/catalog/product/new2.phtml
@@ -24,15 +24,49 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
+
 <?php if (($_products = $this->getProductCollection()) && $_products->getSize()): ?>
-<h2 class="subtitle"><?php echo $this->__('New Products') ?></h2>
-<?php $_columnCount = $this->getColumnCount(); ?>
+<h2 class="subtitle"><?php echo $this->__('Monthly Special') ?></h2>
+<?php
+ 
+/* Edit the catalog/product/list.phtml template to include the following */
+ 
+/* Get the layout's page template */
+$pageLayoutRootTemplate = $this->getLayout()->getBlock('root')->getTemplate();
+ 
+/* Set the column count based on the layout template used */
+switch ($pageLayoutRootTemplate) {
+    case 'page/1column.phtml':
+        $_columnCount = 4;
+        break;
+ 
+    case 'page/2columns-left.phtml':
+        $_columnCount = 3;
+        break;
+ 
+    case 'page/2columns-right.phtml':
+        $_columnCount = 3;
+        break;
+ 
+    case 'page/3columns.phtml':
+        $_columnCount = 2;
+        break;
+ 
+    default:
+        $_columnCount = 3;
+        break;
+}
+ 
+/* Comment out or remove the Magento Column Count function usage */
+/* $_columnCount = $this->getColumnCount(); */
+ 
+?>
     <?php $i=0; foreach ($_products->getItems() as $_product): ?>
         <?php if ($i++%$_columnCount==0): ?>
         <ul class="products-grid">
         <?php endif ?>
             <li class="item<?php if(($i-1)%$_columnCount==0): ?> first<?php elseif($i%$_columnCount==0): ?> last<?php endif; ?>">
-                <a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->escapeHtml($_product->getName()) ?>" class="product-image"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(135) ?>" width="135" height="135" alt="<?php echo $this->escapeHtml($_product->getName()) ?>" /></a>
+                <a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->escapeHtml($_product->getName()) ?>" class="product-image"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(180) ?>" width="180" height="180" alt="<?php echo $this->escapeHtml($_product->getName()) ?>" /></a>
                 <h3 class="product-name"><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->escapeHtml($_product->getName()) ?>"><?php echo $this->escapeHtml($_product->getName()) ?></a></h3>
                 <?php echo $this->getReviewsSummaryHtml($_product, 'short') ?>
                 <?php echo $this->getPriceHtml($_product, true, '-new') ?>
@@ -43,12 +77,12 @@
                         <p class="availability out-of-stock"><span><?php echo $this->__('Out of stock') ?></span></p>
                     <?php endif; ?>
                     <ul class="add-to-links">
-                        <?php if ($this->helper('wishlist')->isAllow()) : ?>
+                        <?php /*if ($this->helper('wishlist')->isAllow()) : ?>
                             <li><a href="<?php echo $this->getAddToWishlistUrl($_product) ?>" class="link-wishlist"><?php echo $this->__('Add to Wishlist') ?></a></li>
                         <?php endif; ?>
                         <?php if ($_compareUrl = $this->getAddToCompareUrl($_product)): ?>
                             <li><span class="separator">|</span> <a href="<?php echo $_compareUrl ?>" class="link-compare"><?php echo $this->__('Add to Compare') ?></a></li>
-                        <?php endif; ?>
+                        <?php endif; */?>
                     </ul>
                 </div>
             </li>
