--- a/app/design/frontend/default/homezone/layout/catalog.xml
+++ b/app/design/frontend/default/homezone/layout/catalog.xml
@@ -52,8 +52,8 @@ Default layout, loads most of the pages
                 <action method="setLinkUrl"><url>checkout/cart</url></action>
             </block>
         </reference>
-        <reference name="right">
-            <block type="catalog/product_compare_sidebar" before="cart_sidebar" name="catalog.compare.sidebar" template="catalog/product/compare/sidebar.phtml"/>
+        <reference name="left">
+            <block type="catalog/product_compare_sidebar" after="cart_sidebar" name="catalog.compare.sidebar" template="catalog/product/compare/sidebar.phtml"/>
             <block type="core/template" name="right.permanent.callout" template="callouts/right_col.phtml">
                 <action method="setImgSrc"><src>images/media/col_right_callout.jpg</src></action>
                 <action method="setImgAlt" translate="alt" module="catalog"><alt>Keep your eyes open for our special Back to School items and save A LOT!</alt></action>
