--- a/app/design/frontend/default/homezone/template/page/2columns-left.phtml
+++ b/app/design/frontend/default/homezone/template/page/2columns-left.phtml
@@ -43,11 +43,13 @@
         <div class="main-container col2-left-layout">
             <div class="main">
                 <?php echo $this->getChildHtml('breadcrumbs') ?>
-                <div class="col-main">
-                    <?php echo $this->getChildHtml('global_messages') ?>
-                    <?php echo $this->getChildHtml('content') ?>
-                </div>
-                <div class="col-left sidebar"><?php echo $this->getChildHtml('left') ?></div>
+				<div class="main-content">	
+					<div class="col-main">
+						<?php echo $this->getChildHtml('global_messages') ?>
+						<?php echo $this->getChildHtml('content') ?>
+					</div>
+					<div class="col-left sidebar"><?php echo $this->getChildHtml('left') ?></div>
+				</div>
             </div>
         </div>
         <?php echo $this->getChildHtml('footer') ?>
