--- a/app/design/frontend/default/homezone/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/homezone/template/catalog/product/list.phtml
@@ -35,9 +35,11 @@
     $_productCollection=$this->getLoadedProductCollection();
     $_helper = $this->helper('catalog/output');
 ?>
+<?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('ads')->toHtml() ?> 
 <?php if(!$_productCollection->count()): ?>
 <p class="note-msg"><?php echo $this->__('There are no products matching the selection.') ?></p>
 <?php else: ?>
+
 <div class="category-products">
     <?php echo $this->getToolbarHtml() ?>
     <?php // List mode ?>
